fixed spacing

--- a/Countdown/style.css
+++ b/Countdown/style.css
@@ -29,14 +29,15 @@ section {
 }
 
 .deadline {
+    margin-top: 40px;
     display: flex;
-    padding: 1em;
+    justify-content: space-between;
 }
 .deadline-format {
     background-color: rgb(9, 15, 70);
     color: white;
     padding: 1em;
-    width: 25%;
+    width: 24%;
     border-right: 1px solid white;
     text-align: center;
 }
